--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -60,6 +60,8 @@
                     .owl-stage {
                         @media (max-width: 481px) {
                             padding-bottom: 15px;
+                            height: 550px;
+                            position: relative;
                         }
                     }
                     >div {
@@ -151,7 +153,6 @@
                                         font-weight: 400;
                                     }
                                     @media (max-width: 480px) {
-                                        top: unset;
                                         bottom: -15px;
                                     }
                                 }
