--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -321,8 +321,8 @@
     margin: 0px auto;
     margin-top: 90px;
     
-    @media (max-width: 480px) {
-        padding: 0;
+    @media (max-width: 960px) {
+        padding: 0 15px;
     }
 }
 
