--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -254,6 +254,7 @@
         position: relative;
         @media (max-width: 767px) {
             border-bottom: 1px solid $grey_border!important;
+            padding: 0 15px;
         }
         .header-nav {
             margin: 0;
