--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -198,8 +198,7 @@
                     }
                     @media (max-width: 480px) {
                         top: 90%;
-                        left: 10px;
-                        ;
+                        right: 0;
                     }
                 }
             }
