--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -193,6 +193,7 @@
                     .price {
                         font-family: $roboto;
                         font-size: 14px;
+                        font-weight: 400;
                     }
                     @media (max-width: 480px) {
                         top: 90%;
