--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -12,6 +12,7 @@
                 width: 100%;
                 .logo {
                     width: 150px;
+                    margin-left: 60px;
                     @media (max-width: 769px) {
                         display: block;
                         margin: 0 auto;
