--- a/assets/scss/cms.css
+++ b/assets/scss/cms.css
@@ -1,14 +1,27 @@
 @media screen and (min-width: 768px) {
     .left {
         float: left;
+        
     }
     .right {
         float: right;
     }
 }
 
+@media screen and (max-width: 768px) {
+    .left {
+        padding: 0 20px;
+        
+        
+    }
+    .right {
+        padding: 0 20px;
+    }
+}
+
 .page-cms .page-header h1 {
     text-align: center;
+    font-size: 30px;
 }
 
 .chapters {
