--- a/assets/scss/cms.css
+++ b/assets/scss/cms.css
@@ -52,7 +52,15 @@
 .page-cms .page-content h2 {
     font-size: 30px;
     line-height: 30px;
+    text-transform: none;
 }
+
+@media screen and (max-width: 768px) {
+    .page-cms .page-content h2 {
+        font-size: 24px;
+    }
+}
+
 
 .page-cms .page-content .page-image-container img {
     width: 100%;
