--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -34,6 +34,11 @@
                                         max-width: 1920px;
                                         max-width: 100%;
                                     }
+                                    @media (min-width: 1920px) {
+                                        max-height: 675px;
+                                        max-width: 1920px;
+                                        margin: 0 auto;
+                                    }
                                 }
                             }
                         }
