--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -175,24 +175,68 @@
                 }
                 .add-to-cart-or-refresh {
                     position: absolute;
-                    top: calc(100% + 40px);
+                    top: calc(100% + 10px);
                     left: 0;
 
                     form {
-                        .btn {
+                        .add-card-button {
+                            border: 2px solid #ddd;
+                            display: inline-flex;
+                            .up,
+                            .down {
+                                outline:none;
+                                -webkit-appearance: none;
+                                background-color: transparent;
+                                border: none;
+                                align-items: center;
+                                justify-content: center;
+                                width: 2rem;
+                                height: 12px;
+                                cursor: pointer;
+                                margin: 0;
+                                position: relative;
+                                font-size: 24px;
+                                padding-top: 5px;
+                            }
+                            
+                            .up:before,
+                            .down:after {
+                                display: inline-block;
+                                position: absolute;
+                                content: '';
+                                width: 1rem;
+                                height: 2px;
+                                transform: translate(-50%, -50%);
+                            }
+
+                            input {
+                                max-width: 4rem;
+                                padding: .5rem;
+                                border: solid #ddd;
+                                border-width: 0 2px;
+                                height: 2rem;
+                                text-align: center;
+                            }
+                        }
+
+                        .add-to-cart {
                             border: none;
                             background: none;
                             outline: none;
-                        }
+                        }                            
 
-                        input {
-                            @media (max-width: 480px) {
-                                width: 65%;
-                            }
-                        }
+                        // .product-quantity {
+                        //     .qty {
+                        //         .input-group {
+                        //             .input-group-btn-vertical {
+                        //                 .btn {
+                        //                     border: 1px solid rgba(0,0,0,.25);
+                        //                 }
+                        //             }
+                        //         }
+                        //     }
+                        // }
                     }
-
-                    
                 }
                 .product-price-and-shipping {
                     position: absolute;
