--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -65,7 +65,7 @@
                     .owl-stage {
                         @media (max-width: 481px) {
                             padding-bottom: 15px;
-                            height: 650px;
+                            height: 550px;
                             position: relative;
                         }
                     }
@@ -421,7 +421,8 @@
     margin: 0 auto;
 }
 
-#stores #wrapper .container {
+#stores #wrapper .container,
+#my-account #wrapper .container {
     width: 1159px;
     margin: 0 auto;
 }
