--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -65,7 +65,7 @@
                     .owl-stage {
                         @media (max-width: 481px) {
                             padding-bottom: 15px;
-                            height: 550px;
+                            height: 650px;
                             position: relative;
                         }
                     }
@@ -219,6 +219,22 @@
                                 }
                             }
                         }
+                    }
+                }
+
+                .owl-nav {
+                    margin: 0!important;
+                    position: static!important;
+                    button {
+                        position: absolute;
+                        color: #000;
+                        width: 40px;
+                        top: 20%;
+                        outline: none;
+                    }
+
+                    .owl-next {
+                        right: 0;
                     }
                 }
             }
