--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -179,9 +179,14 @@
                     left: 0;
 
                     form {
+                        position: relative;
+
                         .add-card-button {
                             border: 2px solid #ddd;
                             display: inline-flex;
+                            position: absolute;
+                            top: 0;
+
                             .up,
                             .down {
                                 outline:none;
@@ -223,6 +228,7 @@
                             border: none;
                             background: none;
                             outline: none;
+                            margin-left: 140px;
                         }                            
 
                         // .product-quantity {
