--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -454,7 +454,8 @@
 }
 
 .page-cms .breadcrumb,
-.page-cms .cms-category-nav {
+.page-cms .cms-category-nav,
+.cms-id-26  #wrapper .cuisine-nature {
     width: 1159px;
     margin: 0 auto;
 }
