--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -1,3 +1,5 @@
+@import "global.scss";
+
 #cms {
     #content {
         h2 {
@@ -53,6 +55,12 @@
                 img {
                     max-width: 100%;
                     height: auto;
+                }
+
+                p {
+                    font-size: 21px;
+                    line-height: 28px;
+                    font-family: $unna;
                 }
             }
             .bloc-image {
