--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -460,3 +460,12 @@
     margin: 0 auto;
 }
 
+.cms-id-26  #wrapper .cuisine-nature {
+    width: 961px;
+    margin: 0 auto;
+}
+
+.page-cms-24 #wrapper .bloc {
+    width: 961px;
+    margin: 0 auto;
+}
