--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -460,12 +460,8 @@
     margin: 0 auto;
 }
 
-.cms-id-26  #wrapper .cuisine-nature {
-    width: 961px;
-    margin: 0 auto;
-}
-
-.page-cms-24 #wrapper .bloc {
+.cms-id-26  #wrapper .cuisine-nature,
+.cms-id-24 #wrapper .bloc {
     width: 961px;
     margin: 0 auto;
 }
