width cms banniere

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -432,11 +432,6 @@
     margin: 0 auto;
 }
 
-.cms-id-24 #wrapper .container {
-    width: 1159px;
-    margin: 0 auto;
-}
-
 #module-kj_abonnement-showAbonnement #wrapper .container {
     width: 962px;
     margin: 0 auto;
@@ -454,8 +449,7 @@
 }
 
 .page-cms .breadcrumb,
-.page-cms .cms-category-nav,
-.cms-id-26  #wrapper .cuisine-nature {
+.page-cms .cms-category-nav {
     width: 1159px;
     margin: 0 auto;
 }
