--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -4,6 +4,7 @@
     nav {
         margin: 30px 0;
         width: 961px;
+        margin: 0 auto;
     }
     .page-header {
         display: none;
