--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -1,7 +1,7 @@
 @import "global.scss";
 
 #cms {
-    nav {
+    .breadcrumb {
         margin: 30px 0;
         width: 961px;
         margin: 0 auto;
