--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -2,9 +2,8 @@
 
 #cms {
     .breadcrumb {
-        margin: 30px 0;
         width: 961px;
-        margin: 0 auto;
+        margin: 30px auto;
     }
     .page-header {
         display: none;
