--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -63,6 +63,11 @@
                     height: auto;
                 }
 
+                h3 {
+                    font-size: 30px;
+                    margin-top: 30px;
+                }
+
                 p {
                     font-size: 21px;
                     line-height: 28px;
