--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -221,6 +221,7 @@
                                 border-width: 0 2px;
                                 height: 2rem;
                                 text-align: center;
+                                outline: none;
                             }
                         }
 
