--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -141,9 +141,14 @@
                                     left: 0;
 
                                     form {
+                                        position: relative;
+
                                         .add-card-button {
                                             border: 2px solid #ddd;
                                             display: inline-flex;
+                                            position: absolute;
+                                            top: 0;
+
                                             .up,
                                             .down {
                                                 outline:none;
@@ -168,6 +173,7 @@
                                                 content: '-';
                                                 width: 1rem;
                                                 height: 2px;
+                                                top: 5px;
                                                 transform: translate(-50%, -50%);
                                             }
 
@@ -177,6 +183,7 @@
                                                 content: '+';
                                                 width: 1rem;
                                                 height: 2px;
+                                                top: 5px;
                                                 transform: translate(-50%, -50%);
                                             }
 
@@ -188,6 +195,7 @@
                                                 border-width: 0 2px;
                                                 height: 2rem;
                                                 text-align: center;
+                                                outline: none;
                                             }
                                         }
 
@@ -195,6 +203,7 @@
                                             border: none;
                                             background: none;
                                             outline: none;
+                                            margin-left: 140px;
                                         }                            
                 
                                         // .product-quantity {
