--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -35,6 +35,7 @@
                                     @media (min-width: 1400px) {
                                         max-height: 675px;
                                         max-width: 1920px;
+                                        display: block;
                                         margin: 0 auto;
                                     }
                                 }
