menu max-width: 1200px

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -279,7 +279,7 @@
                     }
                 }
                 .header-bottom {
-                    ._desktop_top_menu {
+                    #_desktop_top_menu {
                         ul {
                             >li {
                                 margin-right: 50px;
