--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -56,6 +56,8 @@
                             li {
                                 img {
                                     border: none;
+                                    width: 450px;
+                                    height: 450px;
                                 }
                             }
                         }
@@ -668,18 +670,86 @@
                 }
                 .add-to-cart-or-refresh {
                     position: absolute;
-                    top: 0;
-                    right: 0;
+                    top: calc(100% + 15px);
+                    left: 0;
+
                     form {
-                        .btn {
+                        position: relative;
+
+                        .add-card-button {
+                            border: 2px solid #ddd;
+                            display: inline-flex;
+                            position: absolute;
+                            top: 0;
+
+                            .up,
+                            .down {
+                                outline:none;
+                                -webkit-appearance: none;
+                                background-color: transparent;
+                                border: none;
+                                align-items: center;
+                                justify-content: center;
+                                width: 2rem;
+                                height: 12px;
+                                cursor: pointer;
+                                margin: 0;
+                                position: relative;
+                                font-size: 24px;
+                                padding-top: 5px;
+                            }
+                            
+                            .up:before,
+                            .down:after {
+                                display: inline-block;
+                                position: absolute;
+                                content: '-';
+                                width: 1rem;
+                                height: 2px;
+                                top: 5px;
+                                transform: translate(-50%, -50%);
+                            }
+
+                            .up:before {
+                                display: inline-block;
+                                position: absolute;
+                                content: '+';
+                                width: 1rem;
+                                height: 2px;
+                                top: 5px;
+                                transform: translate(-50%, -50%);
+                            }
+
+
+                            input {
+                                max-width: 4rem;
+                                padding: .5rem;
+                                border: solid #ddd;
+                                border-width: 0 2px;
+                                height: 2rem;
+                                text-align: center;
+                                outline: none;
+                            }
+                        }
+
+                        .add-to-cart {
                             border: none;
                             background: none;
                             outline: none;
-                        }
-                    }
-                    @media (max-width: 480px) {
-                        bottom: -28px;
-                        top: unset;
+                            margin-left: 140px;
+                        }                            
+
+                        // .product-quantity {
+                        //     .qty {
+                        //         .input-group {
+                        //             .input-group-btn-vertical {
+                        //                 .btn {
+                        //                     border: 1px solid rgba(0,0,0,.25);
+                        //                 }
+                        //             }
+                        //         }
+                        //     }
+                        // }
                     }
                 }
                 @media (max-width: 768px) {
