--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -766,6 +766,7 @@
                 .price {
                     font-family: $roboto;
                     font-size: 14px;
+                    font-weight: 400;
                 }
                 @media (max-width: 480px) {
                     top: unset;
