--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -22,6 +22,7 @@
         }
     }
     .abonnement-description {
+        display: none;
         @media (max-width: 768px) {
             padding: 40px 40px;
         }
