--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -9775,7 +9775,7 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 }
 
 .custom-text {
-    background: #fff url(../img/pointsnoirs.png);
+    background: #fff url(../img/dots-background.png);
     border-radius: 2px;
     margin-bottom: 1.5rem;
     text-align: center;
